[package]
name = "ai"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
tokio = { version = "1.44.1", features = ["full"] }
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.98"
business = { path = "../../business" }
