[package]
name = "playground"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "playground"
path = "src/main.rs"

[dependencies]
# Chrono: Biblioteca de fecha y hora para Rust
chrono = { version = "0.4", features = ["serde"] }
# Serde: framework para serializar y deserializar
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
# UUID: Una biblioteca para generar identificadores universalmente únicos
uuid = { version = "1.16.0", features = ["v4", "serde"] }
# ThisError: Manejo de errores con facilidad
thiserror = "2.0.12"
#https://docs.rs/anyhow/latest/anyhow/
anyhow = "1.0.98"
# SQLx is an async, pure Rust SQL crate featuring compile-time checked queries without a DSL
sqlx = { version = "0.8.3", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "uuid",
    "macros",
    "derive",
    "migrate",
    "json",
] }
# Dotenv: Carga las variables de entorno de un archivo `.env`
dotenvy = "0.15.7"
# Tokio - Un tiempo de ejecución de Rust asíncrono: https://tokio.rs/
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.40"

business = { path = "../../business" }
persistance = { path = "../../infrastructure/persistance" }
ai = { path = "../../infrastructure/ai" }
